--- a/index.html
+++ b/index.html
@@ -1118,6 +1118,8 @@ ass: Momoh ❤ </p>
 
         // Sistema de música ambiente visual (dark theme)
         function createSoundWave() {
+
+    
             const wave = document.createElement('div');
             wave.style.cssText = `
                 position: fixed;
@@ -1398,6 +1400,7 @@ ass: Momoh ❤ </p>
         document.head.appendChild(extraStyles);
 
         console.log('💖 Site de Amor carregado com sucesso! Feliz Dia dos Namorados! ✨');
+        
     </script>
 </body>
-</html>
+<audio src="audio/spotifydown.com - Aliança - Tribalistas.mp3"></audio>
